# gigaam-transcriber

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install_autostart.sh  pyproject.toml  requirements.txt  transcriber.py
