[project]
name = "gigaam-transcriber"
version = "1.0.0"
description = "Приложение для голосового ввода текста с GigaAM v3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GigaAM Transcriber Contributors"}
]

dependencies = [
    "torch",
    "gigaam @ git+https://github.com/salute-developers/GigaAM.git",
    "PyQt6",
    "Pillow",
    "sounddevice",
    "numpy",
    "scipy",
    "pyperclip",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
Homepage = "https://github.com/MeganJard/gigaam-transcriber"
Repository = "https://github.com/MeganJard/gigaam-transcriber"
Issues = "https://github.com/MeganJard/gigaam-transcriber/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["transcriber.py"]

[dependency-groups]
dev = []
